--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -60,4 +60,5 @@ body {
   font-family: var(--font-primary);
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
 }
