--- a/src/components/GoalsMentor/GoalsMentor.module.css
+++ b/src/components/GoalsMentor/GoalsMentor.module.css
@@ -1,22 +1,7 @@
 .section {
   position: relative;
-  z-index: -1;
+  z-index: 1; /* Lower than slider */
+  margin-top: -250px; /* Negative margin pulls it up */
+  padding-top: 250px; /* Space so content isn't hidden */
   background: #ffffff;
-  margin-top: -150px;
-  padding-top: 150px;
-  min-height: 100vh;
-}
-
-@media (max-width: 1200px) {
-  .section {
-    margin-top: -80px;
-    padding-top: 130px;
-  }
-}
-
-@media (max-width: 768px) {
-  .section {
-    margin-top: -60px;
-    padding-top: 110px;
-  }
 }
