--- a/src/components/JourneySlider/JourneySlider.module.css
+++ b/src/components/JourneySlider/JourneySlider.module.css
@@ -2,7 +2,7 @@
   position: relative;
   width: 100%;
   overflow: hidden;
-  padding-bottom: 180px;
+  /* padding-bottom: 180px; */
 }
 
 .section {
@@ -15,11 +15,12 @@
 
 .backgroundSection {
   position: absolute;
-  bottom: -180px;
+  bottom: -255px;
   left: 0;
   right: 0;
-  height: 400px;
+  height: 300px;
   background: #ffffff;
+  /* background: red; */
   z-index: 1;
 }
 
