--- a/src/components/Stats/Stats.module.css
+++ b/src/components/Stats/Stats.module.css
@@ -1,7 +1,7 @@
 .section {
   width: 100%;
   background: #0a0a0a;
-  padding: 0px 100px;
+  padding: 0px 100px 20px;
   position: relative;
   overflow: hidden;
 }
