--- a/src/components/JourneySlider/JourneySlider.module.css
+++ b/src/components/JourneySlider/JourneySlider.module.css
@@ -174,15 +174,16 @@
 
 @media (max-width: 768px) {
   .container {
-    padding-bottom: 150px;
-  }
-
-  .backgroundSection {
-    height: 200px;
+    padding-bottom: 0;
   }
 
   .section {
-    padding: 60px 0 0;
+    padding: 60px 0 60px;
+  }
+
+  .backgroundSection {
+    bottom: 0;
+    height: 200px;
   }
 
   .title,
@@ -217,11 +218,16 @@
 
 @media (max-width: 480px) {
   .container {
-    padding-bottom: 120px;
+    padding-bottom: 0;
+  }
+
+  .section {
+    padding: 60px 0 40px;
   }
 
   .backgroundSection {
-    height: 150px;
+    bottom: -40px;
+    height: 100px;
   }
 
   .cardFar {
